@@ -1,6 +1,5 @@
 package com.bx.ultimateDonutSmp.managers;
 
-import com.bx.ultimateDonutSmp.UltimateDonutSmp;
 import com.comphenix.protocol.PacketType;
 import com.comphenix.protocol.ProtocolLibrary;
 import com.comphenix.protocol.ProtocolManager;
@@ -60,8 +59,7 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
 
     private void registerAttackListener() {
         attackListener = new PacketAdapter(plugin, ListenerPriority.NORMAL,
-                PacketType.Play.Client.USE_ENTITY,
-                PacketType.Play.Client.ARM_ANIMATION
+                PacketType.Play.Client.USE_ENTITY
         ) {
             @Override
             public void onPacketReceiving(PacketEvent event) {
@@ -90,22 +88,10 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
     }
 
     private Integer readTargetEntityId(PacketContainer packet) {
-        try {
-            if (packet.getIntegers().size() > 0) {
-                return packet.getIntegers().read(0);
-            }
-        } catch (RuntimeException ignored) {
+        if (packet.getIntegers().size() > 0) {
+            return packet.getIntegers().read(0);
         }
-
-        try {
-            Object raw = packet.getModifier().size() > 0 ? packet.getModifier().read(0) : null;
-            if (raw instanceof Number) {
-                return ((Number) raw).intValue();
-            }
-            return null;
-        } catch (RuntimeException ignored) {
-            return null;
-        }
+        return null;
     }
 
     private boolean isAttackAction(PacketContainer packet) {
@@ -114,17 +100,9 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
                 WrappedEnumEntityUseAction action = packet.getEnumEntityUseActions().read(0);
                 return action != null && action.getAction() == EnumWrappers.EntityUseAction.ATTACK;
             }
-        } catch (RuntimeException | LinkageError ignored) {
+        } catch (RuntimeException ignored) {
         }
-
-        try {
-            if (packet.getEntityUseActions().size() > 0) {
-                return packet.getEntityUseActions().read(0) == EnumWrappers.EntityUseAction.ATTACK;
-            }
-        } catch (RuntimeException | LinkageError ignored) {
-            return true;
-        }
-        return true;
+        return false;
     }
 
     @Override
@@ -132,7 +110,6 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
         if (source == null) {
             return new ProfileData(new WrappedGameProfile(fakeUuid, profileName), false);
         }
-
         return createProfile(source, fakeUuid, profileName, resolveSkinTexture(source));
     }
 
@@ -143,23 +120,6 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
             if (wrappedNativeProfile != null && wrappedNativeProfile.hasTexture()) {
                 return wrappedNativeProfile;
             }
-
-            ProfileData nativeProfile = createNativeProfile(fakeUuid, profileName, texture);
-            if (nativeProfile != null && nativeProfile.hasTexture()) {
-                return nativeProfile;
-            }
-
-            ProfileData sourceProfile = createSourceProfileFallback(source, texture);
-            if (sourceProfile != null && sourceProfile.hasTexture()) {
-                return sourceProfile;
-            }
-
-            plugin.getLogger().warning("[FakePlayer] Resolved skin texture for " + source.getName()
-                    + " but could not attach it to the native GameProfile handle"
-                    + " (fakeUuid=" + fakeUuid
-                    + ", profileName=" + profileName
-                    + ", valueLength=" + texture.value().length()
-                    + ", signed=" + (texture.signature() != null && !texture.signature().isBlank()) + ").");
         }
 
         return new ProfileData(new WrappedGameProfile(fakeUuid, profileName), false);
@@ -168,7 +128,7 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
     @Override
     public boolean hasSkinTexture(Object profile) {
         if (profile instanceof ProfileData) {
-            ProfileData profileData = profile;
+            ProfileData profileData = (ProfileData) profile;
             return profileData.hasTexture();
         }
         return false;
@@ -179,7 +139,6 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
         if (tablistManager == null) {
             return null;
         }
-
         try {
             return tablistManager.resolveCurrentSkinTexture(source);
         } catch (RuntimeException | LinkageError error) {
@@ -196,673 +155,9 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
                 return new ProfileData(profile, true);
             }
         } catch (RuntimeException | LinkageError error) {
-            plugin.getLogger().log(Level.FINE, "Unable to create ProtocolLib fakeplayer profile with skin texture.",
-                    error);
+            plugin.getLogger().log(Level.FINE, "Unable to create ProtocolLib fakeplayer profile with skin texture.", error);
         }
         return null;
-    }
-
-    private ProfileData createSourceProfileFallback(Player source, TablistManager.SkinTexture texture) {
-        if (source == null || texture == null || !texture.isValid() || !supportsExplicitPlayerInfoProfileId()) {
-            return null;
-        }
-
-        try {
-            WrappedGameProfile sourceProfile = WrappedGameProfile.fromPlayer(source);
-            if (sourceProfile == null || sourceProfile.getHandle() == null) {
-                return null;
-            }
-
-            setProtocolLibPropertyCache(
-                    sourceProfile,
-                    new WrappedSignedProperty("textures", texture.value(), texture.signature())
-            );
-            plugin.getLogger().info("[FakePlayer] Using live player GameProfile fallback for " + source.getName()
-                    + " because a detached profile could not be mutated.");
-            return new ProfileData(sourceProfile, true);
-        } catch (RuntimeException | LinkageError error) {
-            plugin.getLogger().log(Level.FINE,
-                    "Unable to use live player GameProfile fallback for fakeplayer skin.", error);
-            return null;
-        }
-    }
-
-    private boolean supportsExplicitPlayerInfoProfileId() {
-        try {
-            PacketContainer packet = protocolManager.createPacket(playerInfoPacketType());
-            PlayerInfoData infoData = new PlayerInfoData(
-                    UUID.randomUUID(),
-                    0,
-                    true,
-                    EnumWrappers.NativeGameMode.SURVIVAL,
-                    new WrappedGameProfile(UUID.randomUUID(), "FakePlayer"),
-                    null
-            );
-            writePlayerInfoData(packet, List.of(infoData));
-            return true;
-        } catch (RuntimeException | LinkageError ignored) {
-            return false;
-        }
-    }
-
-    private boolean applyNativeTextureToWrappedProfile(
-            WrappedGameProfile targetProfile,
-            TablistManager.SkinTexture texture
-    ) {
-        if (targetProfile == null || texture == null || !texture.isValid()) {
-            return false;
-        }
-
-        Object profileHandle = targetProfile.getHandle();
-        if (profileHandle == null) {
-            return false;
-        }
-
-        WrappedSignedProperty wrappedProperty =
-                new WrappedSignedProperty("textures", texture.value(), texture.signature());
-        setProtocolLibPropertyCache(targetProfile, wrappedProperty);
-
-        try {
-            Object nativeProperty = createNativeProperty(profileHandle.getClass().getClassLoader(), texture);
-            if (nativeProperty != null && addNativeTexture(profileHandle, nativeProperty)
-                    && hasNativeProfileTexture(profileHandle)) {
-                return true;
-            }
-        } catch (ReflectiveOperationException | RuntimeException | LinkageError ignored) {
-        }
-
-        try {
-            Object propertyHandle = wrappedProperty.getHandle();
-            if (propertyHandle != null && addNativeTexture(profileHandle, propertyHandle)
-                    && hasNativeProfileTexture(profileHandle)) {
-                return true;
-            }
-        } catch (ReflectiveOperationException | RuntimeException | LinkageError ignored) {
-        }
-
-        return false;
-    }
-
-    private boolean copyTextureToWrappedProfile(Player source, WrappedGameProfile targetProfile, TablistManager.SkinTexture texture) {
-        try {
-            WrappedSignedProperty property = new WrappedSignedProperty("textures", texture.value(), texture.signature());
-            boolean applied = applyTextureToGameProfile(targetProfile, property);
-            if (!applied || !hasNativeProfileTexture(targetProfile.getHandle())) {
-                plugin.getLogger().log(Level.FINE,
-                        "Resolved SkinsRestorer texture for " + source.getName()
-                                + " but could only attach it through ProtocolLib's profile cache.");
-                return false;
-            }
-            return true;
-        } catch (RuntimeException | LinkageError error) {
-            plugin.getLogger().log(Level.FINE,
-                    "Unable to copy fakeplayer skin into ProtocolLib profile for " + source.getName() + ".", error);
-            return false;
-        }
-    }
-
-    private boolean putTextureInWrappedProfileProperties(
-            WrappedGameProfile targetProfile,
-            TablistManager.SkinTexture texture
-    ) {
-        if (targetProfile == null || texture == null || !texture.isValid()) {
-            return false;
-        }
-
-        try {
-            WrappedSignedProperty property = new WrappedSignedProperty("textures", texture.value(), texture.signature());
-            com.google.common.collect.Multimap<String, WrappedSignedProperty> properties = targetProfile.getProperties();
-            if (properties == null) {
-                return false;
-            }
-            properties.removeAll("textures");
-            properties.put("textures", property);
-            setProtocolLibPropertyCache(targetProfile, property);
-            return hasWrappedProfileTexture(targetProfile);
-        } catch (RuntimeException | LinkageError error) {
-            plugin.getLogger().log(Level.FINE, "Unable to set fakeplayer skin through ProtocolLib profile properties.",
-                    error);
-            return false;
-        }
-    }
-
-    private boolean hasWrappedProfileTexture(WrappedGameProfile profile) {
-        if (profile == null) {
-            return false;
-        }
-
-        try {
-            com.google.common.collect.Multimap<String, WrappedSignedProperty> properties = profile.getProperties();
-            if (properties == null) {
-                return false;
-            }
-            for (WrappedSignedProperty property : properties.get("textures")) {
-                if (property != null && property.getValue() != null && !property.getValue().isBlank()) {
-                    return true;
-                }
-            }
-        } catch (RuntimeException | LinkageError ignored) {
-        }
-        return false;
-    }
-
-    private ProfileData createNativeProfile(UUID fakeUuid, String profileName, TablistManager.SkinTexture texture) {
-        try {
-            Object nativeProfile = instantiateNativeGameProfile(fakeUuid, profileName);
-            if (nativeProfile == null) {
-                return null;
-            }
-
-            Object nativeProperty = createNativeProperty(nativeProfile.getClass().getClassLoader(), texture);
-            if (nativeProperty == null) {
-                return null;
-            }
-
-            boolean added = addNativeTexture(nativeProfile, nativeProperty);
-            if (!added || !hasNativeProfileTexture(nativeProfile)) {
-                return null;
-            }
-
-            WrappedGameProfile wrappedProfile = WrappedGameProfile.fromHandle(nativeProfile);
-            setProtocolLibPropertyCache(
-                    wrappedProfile,
-                    new WrappedSignedProperty("textures", texture.value(), texture.signature())
-            );
-            return new ProfileData(wrappedProfile, true);
-        } catch (ReflectiveOperationException | RuntimeException | LinkageError error) {
-            plugin.getLogger().log(Level.FINE, "Unable to create native fakeplayer profile with skin texture.", error);
-            return null;
-        }
-    }
-
-    private Object instantiateNativeGameProfile(UUID uuid, String name) throws ReflectiveOperationException {
-        Class<?> profileClass = findFirstClass(
-                "com.mojang.authlib.GameProfile",
-                "net.minecraft.util.com.mojang.authlib.GameProfile"
-        );
-        if (profileClass == null) {
-            return null;
-        }
-
-        for (Constructor<?> constructor : profileClass.getDeclaredConstructors()) {
-            Class<?>[] parameters = constructor.getParameterTypes();
-            constructor.setAccessible(true);
-            if (parameters.length == 2 && parameters[0] == UUID.class && parameters[1] == String.class) {
-                return constructor.newInstance(uuid, name);
-            }
-            if (parameters.length == 2 && parameters[0] == String.class && parameters[1] == String.class) {
-                return constructor.newInstance(uuid.toString(), name);
-            }
-        }
-        return null;
-    }
-
-    private Object createNativeProperty(ClassLoader preferredLoader, TablistManager.SkinTexture texture)
-            throws ReflectiveOperationException {
-        Class<?> propertyClass = findFirstClass(preferredLoader,
-                "com.mojang.authlib.properties.Property",
-                "net.minecraft.util.com.mojang.authlib.properties.Property"
-        );
-        if (propertyClass == null) {
-            return null;
-        }
-
-        for (Constructor<?> constructor : propertyClass.getDeclaredConstructors()) {
-            Class<?>[] parameters = constructor.getParameterTypes();
-            constructor.setAccessible(true);
-            if (parameters.length == 3
-                    && parameters[0] == String.class
-                    && parameters[1] == String.class
-                    && parameters[2] == String.class) {
-                return constructor.newInstance("textures", texture.value(), texture.signature());
-            }
-            if (parameters.length == 2
-                    && parameters[0] == String.class
-                    && parameters[1] == String.class) {
-                return constructor.newInstance("textures", texture.value());
-            }
-        }
-        return null;
-    }
-
-    private boolean addNativeTexture(Object nativeProfile, Object nativeProperty) throws ReflectiveOperationException {
-        for (String methodName : List.of("getProperties", "properties")) {
-            for (Method method : findMethods(nativeProfile.getClass(), methodName, 0)) {
-                method.setAccessible(true);
-                Object propertyContainer = method.invoke(nativeProfile);
-                if (mutateNativePropertyContainer(propertyContainer, nativeProperty)) {
-                    return true;
-                }
-            }
-        }
-
-        for (Class<?> current = nativeProfile.getClass(); current != null; current = current.getSuperclass()) {
-            for (Field field : current.getDeclaredFields()) {
-                if (!isLikelyPropertyContainerField(field)) {
-                    continue;
-                }
-                field.setAccessible(true);
-                Object propertyContainer = field.get(nativeProfile);
-                if (mutateNativePropertyContainer(propertyContainer, nativeProperty)) {
-                    return true;
-                }
-            }
-        }
-
-        return false;
-    }
-
-    private boolean mutateNativePropertyContainer(Object propertyContainer, Object nativeProperty) {
-        if (propertyContainer == null || nativeProperty == null) {
-            return false;
-        }
-
-        if (putNativeIntoGuavaMultimap(propertyContainer, nativeProperty)) {
-            return true;
-        }
-
-        invokeCompatible(propertyContainer, "removeAll", "textures");
-        invokeCompatible(propertyContainer, "remove", "textures");
-
-        if (invokeCompatible(propertyContainer, "put", "textures", nativeProperty)) {
-            return true;
-        }
-        return invokeCompatible(propertyContainer, "add", nativeProperty);
-    }
-
-    private boolean hasNativeProfileTexture(Object nativeProfile) {
-        if (nativeProfile == null) {
-            return false;
-        }
-
-        for (String methodName : List.of("getProperties", "properties")) {
-            try {
-                for (Method method : findMethods(nativeProfile.getClass(), methodName, 0)) {
-                    method.setAccessible(true);
-                    if (hasNativeTexture(method.invoke(nativeProfile))) {
-                        return true;
-                    }
-                }
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-
-        for (Class<?> current = nativeProfile.getClass(); current != null; current = current.getSuperclass()) {
-            for (Field field : current.getDeclaredFields()) {
-                if (!isLikelyPropertyContainerField(field)) {
-                    continue;
-                }
-                try {
-                    field.setAccessible(true);
-                    if (hasNativeTexture(field.get(nativeProfile))) {
-                        return true;
-                    }
-                } catch (IllegalAccessException | RuntimeException ignored) {
-                }
-            }
-        }
-        return false;
-    }
-
-    @SuppressWarnings("rawtypes")
-    private boolean putNativeIntoGuavaMultimap(Object propertyContainer, Object nativeProperty) {
-        if (!(propertyContainer instanceof com.google.common.collect.Multimap) || nativeProperty == null) {
-            return false;
-        }
-        Multimap multimap = (Multimap) propertyContainer;
-
-        try {
-            multimap.removeAll("textures");
-            return multimap.put("textures", nativeProperty);
-        } catch (RuntimeException ignored) {
-            return false;
-        }
-    }
-
-    private Class<?> findFirstClass(String... classNames) {
-        return findFirstClass(null, classNames);
-    }
-
-    private Class<?> findFirstClass(ClassLoader preferredLoader, String... classNames) {
-        java.util.ArrayList<ClassLoader> loaders = new java.util.ArrayList<>();
-        if (preferredLoader != null) {
-            loaders.add(preferredLoader);
-        }
-        ClassLoader contextLoader = Thread.currentThread().getContextClassLoader();
-        if (contextLoader != null && !loaders.contains(contextLoader)) {
-            loaders.add(contextLoader);
-        }
-        if (!loaders.contains(getClass().getClassLoader())) {
-            loaders.add(getClass().getClassLoader());
-        }
-        if (!loaders.contains(Player.class.getClassLoader())) {
-            loaders.add(Player.class.getClassLoader());
-        }
-
-        for (ClassLoader loader : loaders) {
-            for (String className : classNames) {
-                try {
-                    return Class.forName(className, false, loader);
-                } catch (ClassNotFoundException ignored) {
-                }
-            }
-        }
-
-        for (String className : classNames) {
-            try {
-                return Class.forName(className);
-            } catch (ClassNotFoundException ignored) {
-            }
-        }
-        return null;
-    }
-
-    private boolean applyTextureToGameProfile(WrappedGameProfile targetProfile, WrappedSignedProperty property) {
-        if (targetProfile == null || property == null) {
-            return false;
-        }
-
-        boolean appliedToHandle = applyTextureToPropertyContainer(targetProfile.getHandle(), property.getHandle(), property);
-        setProtocolLibPropertyCache(targetProfile, property);
-        return appliedToHandle;
-    }
-
-    private boolean applyTextureToPropertyContainer(Object source, Object propertyHandle, WrappedSignedProperty property) {
-        if (source == null) {
-            return false;
-        }
-
-        for (String methodName : List.of("getProperties", "properties")) {
-            try {
-                for (Method method : findMethods(source.getClass(), methodName, 0)) {
-                    method.setAccessible(true);
-                    Object propertyContainer = method.invoke(source);
-                    if (mutatePropertyContainer(propertyContainer, propertyHandle, property)) {
-                        return true;
-                    }
-                }
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-
-        for (Class<?> current = source.getClass(); current != null; current = current.getSuperclass()) {
-            for (Field field : current.getDeclaredFields()) {
-                try {
-                    field.setAccessible(true);
-                    Object value = field.get(source);
-                    if (mutatePropertyContainer(value, propertyHandle, property)) {
-                        return true;
-                    }
-                    if (value == null && isLikelyPropertyContainerField(field)) {
-                        Object propertyContainer = createPropertyContainer(field.getType(), property);
-                        if (propertyContainer != null) {
-                            field.set(source, propertyContainer);
-                            return true;
-                        }
-                    }
-                } catch (IllegalAccessException | RuntimeException ignored) {
-                }
-            }
-        }
-        return false;
-    }
-
-    private boolean isLikelyPropertyContainerField(Field field) {
-        String fieldName = field.getName().toLowerCase(java.util.Locale.ROOT);
-        String typeName = field.getType().getName().toLowerCase(java.util.Locale.ROOT);
-        return fieldName.contains("properties")
-                || fieldName.contains("property")
-                || typeName.contains("propertymap")
-                || typeName.contains("multimap");
-    }
-
-    private Object createPropertyContainer(Class<?> type, WrappedSignedProperty property) {
-        if (type == null) {
-            return null;
-        }
-
-        for (Constructor<?> constructor : type.getDeclaredConstructors()) {
-            if (constructor.getParameterCount() != 0) {
-                continue;
-            }
-            try {
-                constructor.setAccessible(true);
-                Object container = constructor.newInstance();
-                return mutatePropertyContainer(container, property.getHandle(), property) ? container : null;
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-
-        if (com.google.common.collect.Multimap.class.isAssignableFrom(type)) {
-            com.google.common.collect.Multimap<String, Object> map = com.google.common.collect.HashMultimap.create();
-            map.put("textures", property.getHandle());
-            return map;
-        }
-        return null;
-    }
-
-    private List<Method> findMethods(Class<?> type, String methodName, int parameterCount) {
-        java.util.ArrayList<Method> methods = new java.util.ArrayList<>();
-        for (Method method : type.getMethods()) {
-            if (method.getName().equals(methodName) && method.getParameterCount() == parameterCount) {
-                methods.add(method);
-            }
-        }
-        for (Class<?> current = type; current != null; current = current.getSuperclass()) {
-            for (Method method : current.getDeclaredMethods()) {
-                if (method.getName().equals(methodName) && method.getParameterCount() == parameterCount
-                        && !methods.contains(method)) {
-                    methods.add(method);
-                }
-            }
-        }
-        return methods;
-    }
-
-    private boolean mutatePropertyContainer(Object propertyContainer, Object propertyHandle, WrappedSignedProperty property) {
-        if (propertyContainer == null) {
-            return false;
-        }
-
-        if (putIntoGuavaMultimap(propertyContainer, propertyHandle, property)) {
-            return true;
-        }
-
-        invokeCompatible(propertyContainer, "removeAll", "textures");
-        invokeCompatible(propertyContainer, "remove", "textures");
-
-        boolean added = invokeCompatible(propertyContainer, "put", "textures", propertyHandle);
-        if (!added) {
-            added = invokeCompatible(propertyContainer, "put", "textures", property);
-        }
-        if (!added) {
-            added = invokeCompatible(propertyContainer, "add", propertyHandle);
-        }
-        if (!added) {
-            added = invokeCompatible(propertyContainer, "add", property);
-        }
-        if (!added) {
-            added = invokePropertyPut(propertyContainer, property);
-        }
-        if (!added) {
-            added = invokePropertyAdd(propertyContainer, property);
-        }
-        return added;
-    }
-
-    @SuppressWarnings({"rawtypes", "unchecked"})
-    private boolean putIntoGuavaMultimap(
-            Object propertyContainer,
-            Object propertyHandle,
-            WrappedSignedProperty property
-    ) {
-        if (!(propertyContainer instanceof com.google.common.collect.Multimap)) {
-            return false;
-        }
-        Multimap multimap = (Multimap) propertyContainer;
-
-        Object value = propertyHandle != null ? propertyHandle : property;
-        if (value == null) {
-            return false;
-        }
-
-        try {
-            multimap.removeAll("textures");
-            return multimap.put("textures", value);
-        } catch (RuntimeException ignored) {
-            return false;
-        }
-    }
-
-    private boolean invokePropertyPut(Object propertyContainer, WrappedSignedProperty property) {
-        for (Method method : findMethods(propertyContainer.getClass(), "put", 2)) {
-            Class<?>[] parameterTypes = method.getParameterTypes();
-            if (!box(parameterTypes[0]).isInstance("textures")) {
-                continue;
-            }
-            Object adaptedProperty = createCompatibleProperty(parameterTypes[1], property);
-            if (adaptedProperty == null) {
-                continue;
-            }
-            try {
-                method.setAccessible(true);
-                method.invoke(propertyContainer, "textures", adaptedProperty);
-                return true;
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-        return false;
-    }
-
-    private boolean invokePropertyAdd(Object propertyContainer, WrappedSignedProperty property) {
-        for (Method method : findMethods(propertyContainer.getClass(), "add", 1)) {
-            Object adaptedProperty = createCompatibleProperty(method.getParameterTypes()[0], property);
-            if (adaptedProperty == null) {
-                continue;
-            }
-            try {
-                method.setAccessible(true);
-                method.invoke(propertyContainer, adaptedProperty);
-                return true;
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-        return false;
-    }
-
-    private Object createCompatibleProperty(Class<?> parameterType, WrappedSignedProperty property) {
-        Object handle = property.getHandle();
-        if (handle != null && box(parameterType).isInstance(handle)) {
-            return handle;
-        }
-        if (box(parameterType).isInstance(property)) {
-            return property;
-        }
-
-        for (Constructor<?> constructor : parameterType.getDeclaredConstructors()) {
-            Class<?>[] parameters = constructor.getParameterTypes();
-            try {
-                constructor.setAccessible(true);
-                if (parameters.length == 3
-                        && parameters[0] == String.class
-                        && parameters[1] == String.class
-                        && parameters[2] == String.class) {
-                    return constructor.newInstance("textures", property.getValue(), property.getSignature());
-                }
-                if (parameters.length == 2
-                        && parameters[0] == String.class
-                        && parameters[1] == String.class) {
-                    return constructor.newInstance("textures", property.getValue());
-                }
-            } catch (ReflectiveOperationException | RuntimeException ignored) {
-            }
-        }
-        return null;
-    }
-
-    private boolean setProtocolLibPropertyCache(WrappedGameProfile targetProfile, WrappedSignedProperty property) {
-        try {
-            com.google.common.collect.Multimap<String, WrappedSignedProperty> propertyMap =
-                    com.google.common.collect.HashMultimap.create();
-            propertyMap.put("textures", property);
-            Field field = WrappedGameProfile.class.getDeclaredField("propertyMap");
-            field.setAccessible(true);
-            field.set(targetProfile, propertyMap);
-            return true;
-        } catch (ReflectiveOperationException | RuntimeException ignored) {
-            return false;
-        }
-    }
-
-    private boolean invokeCompatible(Object target, String methodName, Object... args) {
-        if (target == null) {
-            return false;
-        }
-
-        for (Method method : target.getClass().getMethods()) {
-            if (tryInvokeCompatible(target, method, methodName, args)) {
-                return true;
-            }
-        }
-        for (Method method : target.getClass().getDeclaredMethods()) {
-            if (tryInvokeCompatible(target, method, methodName, args)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private boolean tryInvokeCompatible(Object target, Method method, String methodName, Object... args) {
-        if (!method.getName().equals(methodName) || method.getParameterCount() != args.length) {
-            return false;
-        }
-
-        Class<?>[] parameterTypes = method.getParameterTypes();
-        for (int index = 0; index < parameterTypes.length; index++) {
-            Object arg = args[index];
-            if (arg != null && !box(parameterTypes[index]).isInstance(arg)) {
-                return false;
-            }
-        }
-
-        try {
-            method.setAccessible(true);
-            method.invoke(target, args);
-            return true;
-        } catch (ReflectiveOperationException | RuntimeException ignored) {
-            return false;
-        }
-    }
-
-    private Class<?> box(Class<?> type) {
-        if (!type.isPrimitive()) {
-            return type;
-        }
-        if (type == boolean.class) {
-            return Boolean.class;
-        }
-        if (type == int.class) {
-            return Integer.class;
-        }
-        if (type == long.class) {
-            return Long.class;
-        }
-        if (type == double.class) {
-            return Double.class;
-        }
-        if (type == float.class) {
-            return Float.class;
-        }
-        if (type == byte.class) {
-            return Byte.class;
-        }
-        if (type == short.class) {
-            return Short.class;
-        }
-        if (type == char.class) {
-            return Character.class;
-        }
-        return Void.class;
     }
 
     @Override
@@ -1015,7 +310,7 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
     }
 
     private PacketContainer createPlayerInfoAdd(FakePlayerSession fakePlayer) {
-        PacketContainer packet = protocolManager.createPacket(playerInfoPacketType());
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.PLAYER_INFO);
         EnumSet<EnumWrappers.PlayerInfoAction> actions = EnumSet.of(
                 EnumWrappers.PlayerInfoAction.ADD_PLAYER,
                 EnumWrappers.PlayerInfoAction.UPDATE_LISTED
@@ -1035,23 +330,27 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
                 unwrapProfile(fakePlayer.profile()),
                 null
         );
-        writePlayerInfoData(packet, List.of(infoData));
+        writePlayerInfoData(packet, Collections.singletonList(infoData));
         return packet;
     }
 
     private WrappedGameProfile unwrapProfile(Object profile) {
         if (profile instanceof ProfileData) {
-            ProfileData profileData = profile;
+            ProfileData profileData = (ProfileData) profile;
             return profileData.profile();
         }
-        return null;
         return (WrappedGameProfile) profile;
+    }
+
+    @Override
+    public void removeFromTablist(Player viewer, FakePlayerSession fakePlayer) {
+        send(viewer, createPlayerInfoRemove(fakePlayer));
     }
 
     private PacketContainer createPlayerInfoRemove(FakePlayerSession fakePlayer) {
         PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.PLAYER_INFO_REMOVE);
         if (packet.getUUIDLists().size() > 0) {
-            packet.getUUIDLists().write(0, List.of(fakePlayer.fakeUuid()));
+            packet.getUUIDLists().write(0, Collections.singletonList(fakePlayer.fakeUuid()));
         } else if (packet.getUUIDs().size() > 0) {
             packet.getUUIDs().write(0, fakePlayer.fakeUuid());
         }
@@ -1059,9 +358,11 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
     }
 
     private PacketContainer createSpawnEntity(FakePlayerSession fakePlayer) {
-        PacketContainer namedSpawn = createNamedEntitySpawn(fakePlayer);
-        if (namedSpawn != null) {
-            return namedSpawn;
+        try {
+            if (PacketType.Play.Server.NAMED_ENTITY_SPAWN.isSupported()) {
+                return createNamedEntitySpawn(fakePlayer);
+            }
+        } catch (RuntimeException ignored) {
         }
 
         Location location = fakePlayer.visualLocation();
@@ -1080,15 +381,11 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
         packet.getDoubles().write(2, location.getZ());
         writeByte(packet, 0, angle(location.getPitch()));
         writeByte(packet, 1, angle(location.getYaw()));
-        writeByte(packet, 2, angle(location.getYaw()));
         return packet;
     }
 
     private PacketContainer createNamedEntitySpawn(FakePlayerSession fakePlayer) {
         try {
-            if (!PacketType.Play.Server.NAMED_ENTITY_SPAWN.isSupported()) {
-                return null;
-            }
             Location location = fakePlayer.visualLocation();
             PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.NAMED_ENTITY_SPAWN);
             packet.getModifier().writeDefaults();
@@ -1144,12 +441,6 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
             packet.getDoubles().write(0, location.getX());
             packet.getDoubles().write(1, location.getY());
             packet.getDoubles().write(2, location.getZ());
-        } else if (!writeModernTeleport(packet, location, onGround)) {
-            if (packet.getVectors().size() > 0) {
-                packet.getVectors().write(0, location.toVector());
-            } else {
-                throw new IllegalStateException("ENTITY_TELEPORT packet has no supported position fields.");
-            }
         }
         writeByte(packet, 0, angle(location.getYaw()));
         writeByte(packet, 1, angle(location.getPitch()));
@@ -1163,20 +454,216 @@ final class FakePlayerProtocolLibBridge implements FakePlayerPacketBridge {
         return packet;
     }
 
-    private boolean writeModernTeleport(PacketContainer packet, Location location, boolean onGround) {
-        try {
-            Object handle = packet.getHandle();
-            if (handle == null) {
-                return false;
-            }
-
-            ClassLoader loader = handle.getClass().getClassLoader();
-            Class<?> vec3Class = findFirstClass(loader, "net.minecraft.world.phys.Vec3");
-            Class<?> positionMoveRotationClass = findFirstClass(loader,
-                    "net.minecraft.world.entity.PositionMoveRotation",
-                    "net.minecraft.world.entity.PositionMoveRotation$NestedClass"
-            );
-        } catch (RuntimeException | LinkageError ignored) {
-            return false;
+    private PacketContainer createEntityStatus(int entityId, byte status) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.ENTITY_STATUS);
+        packet.getModifier().writeDefaults();
+        packet.getIntegers().write(0, entityId);
+        if (packet.getBytes().size() > 0) {
+            writeByte(packet, 0, status);
+            return packet;
         }
-        return false;
+        if (packet.getModifier().size() > 1) {
+            packet.getModifier().write(1, status);
+            return packet;
+        }
+        throw new IllegalStateException("ENTITY_STATUS packet has no supported status field.");
+    }
+
+    private PacketContainer createHurtAnimation(FakePlayerSession fakePlayer, Player attacker) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.HURT_ANIMATION);
+        packet.getModifier().writeDefaults();
+        if (packet.getIntegers().size() > 0) {
+            packet.getIntegers().write(0, fakePlayer.entityId());
+        }
+        if (packet.getFloat().size() > 0) {
+            float yaw = attacker == null ? fakePlayer.visualLocation().getYaw() : attacker.getLocation().getYaw();
+            packet.getFloat().write(0, yaw);
+        }
+        return packet;
+    }
+
+    private PacketContainer createEntityVelocity(int entityId, Vector velocity) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.ENTITY_VELOCITY);
+        packet.getModifier().writeDefaults();
+        if (packet.getIntegers().size() >= 4) {
+            packet.getIntegers().write(0, entityId);
+            packet.getIntegers().write(1, velocityToProtocol(velocity.getX()));
+            packet.getIntegers().write(2, velocityToProtocol(velocity.getY()));
+            packet.getIntegers().write(3, velocityToProtocol(velocity.getZ()));
+            return packet;
+        }
+        if (packet.getIntegers().size() > 0) {
+            packet.getIntegers().write(0, entityId);
+        }
+        if (packet.getVectors().size() > 0) {
+            packet.getVectors().write(0, velocity);
+            return packet;
+        }
+        if (packet.getDoubles().size() >= 3) {
+            packet.getDoubles().write(0, velocity.getX());
+            packet.getDoubles().write(1, velocity.getY());
+            packet.getDoubles().write(2, velocity.getZ());
+            return packet;
+        }
+        if (packet.getShorts().size() >= 3) {
+            packet.getShorts().write(0, (short) velocityToProtocol(velocity.getX()));
+            packet.getShorts().write(1, (short) velocityToProtocol(velocity.getY()));
+            packet.getShorts().write(2, (short) velocityToProtocol(velocity.getZ()));
+            return packet;
+        }
+        if (packet.getBytes().size() >= 3) {
+            packet.getBytes().write(0, (byte) velocityToProtocol(velocity.getX()));
+            packet.getBytes().write(1, (byte) velocityToProtocol(velocity.getY()));
+            packet.getBytes().write(2, (byte) velocityToProtocol(velocity.getZ()));
+            return packet;
+        }
+        throw new IllegalStateException("ENTITY_VELOCITY packet has no supported velocity fields.");
+    }
+
+    private void applyVanillaLikeKnockback(FakePlayerSession fakePlayer, Vector knockback) {
+        Vector velocity = fakePlayer.visualVelocity();
+        velocity.setX(velocity.getX() * 0.5D + knockback.getX());
+        velocity.setZ(velocity.getZ() * 0.5D + knockback.getZ());
+        if (fakePlayer.visualOnGround()) {
+            velocity.setY(Math.min(0.4D, velocity.getY() * 0.5D + VANILLA_KNOCKBACK_VERTICAL));
+        }
+        fakePlayer.setVisualVelocity(velocity);
+        fakePlayer.setVisualOnGround(false);
+    }
+
+    private Vector hitKnockback(Player attacker, FakePlayerSession fakePlayer) {
+        Location origin = attacker.getLocation();
+        Location target = fakePlayer.visualLocation();
+        Vector direction = target.toVector().subtract(origin.toVector());
+        direction.setY(0D);
+        if (direction.lengthSquared() < 0.0001D) {
+            direction = origin.getDirection().multiply(-1D);
+            direction.setY(0D);
+        }
+        if (direction.lengthSquared() > 0.0001D) {
+            direction.normalize();
+        }
+
+        return direction.multiply(VANILLA_KNOCKBACK_HORIZONTAL).setY(VANILLA_KNOCKBACK_VERTICAL);
+    }
+
+    private Location knockbackLocation(FakePlayerSession fakePlayer, Vector velocity) {
+        Location location = fakePlayer.visualLocation();
+        location.add(velocity.getX(), Math.min(0.35D, velocity.getY()), velocity.getZ());
+        return location;
+    }
+
+    private int velocityToProtocol(double value) {
+        double clamped = Math.max(-3.9D, Math.min(3.9D, value));
+        return (int) Math.round(clamped * 8000.0D);
+    }
+
+    private PacketContainer createNoGravityMetadata(FakePlayerSession fakePlayer) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.ENTITY_METADATA);
+        packet.getModifier().writeDefaults();
+        packet.getIntegers().write(0, fakePlayer.entityId());
+
+        WrappedDataWatcher.Serializer serializer = WrappedDataWatcher.Registry.get(Boolean.class);
+        WrappedDataValue noGravityData = new WrappedDataValue(5, serializer, true);
+        if (packet.getDataValueCollectionModifier().size() > 0) {
+            packet.getDataValueCollectionModifier().write(0, Collections.singletonList(noGravityData));
+            return packet;
+        }
+
+        WrappedDataWatcher watcher = new WrappedDataWatcher();
+        watcher.setObject(
+                new WrappedDataWatcher.WrappedDataWatcherObject(5, serializer),
+                true
+        );
+        if (packet.getWatchableCollectionModifier().size() > 0) {
+            packet.getWatchableCollectionModifier().write(0, watcher.getWatchableObjects());
+            return packet;
+        }
+
+        throw new IllegalStateException("ENTITY_METADATA packet has no supported metadata collection fields.");
+    }
+
+    private PacketContainer createEntityMetadata(FakePlayerSession fakePlayer) {
+        PacketContainer packet = protocolManager.createPacket(PacketType.Play.Server.ENTITY_METADATA);
+        packet.getModifier().writeDefaults();
+        packet.getIntegers().write(0, fakePlayer.entityId());
+
+        byte allSkinLayers = (byte) plugin.getConfigManager().getStaffMode()
+                .getInt("FAKE-PLAYER.SKIN-LAYERS-BITMASK", 0x7F);
+
+        int skinLayerIndex = configuredSkinLayersMetadataIndex();
+        WrappedDataValue skinLayerData = new WrappedDataValue(
+                skinLayerIndex,
+                WrappedDataWatcher.Registry.get(Byte.class),
+                allSkinLayers
+        );
+        if (packet.getDataValueCollectionModifier().size() > 0) {
+            packet.getDataValueCollectionModifier().write(0, Collections.singletonList(skinLayerData));
+            return packet;
+        }
+
+        WrappedDataWatcher watcher = new WrappedDataWatcher();
+        watcher.setObject(
+                new WrappedDataWatcher.WrappedDataWatcherObject(
+                        skinLayerIndex,
+                        WrappedDataWatcher.Registry.get(Byte.class)
+                ),
+                allSkinLayers
+        );
+        if (packet.getWatchableCollectionModifier().size() > 0) {
+            packet.getWatchableCollectionModifier().write(0, watcher.getWatchableObjects());
+            return packet;
+        }
+
+        throw new IllegalStateException("ENTITY_METADATA packet has no supported metadata collection fields.");
+    }
+
+    private int configuredSkinLayersMetadataIndex() {
+        return plugin.getConfigManager().getStaffMode()
+                .getInt("FAKE-PLAYER.SKIN-LAYERS-METADATA-INDEX", -1);
+    }
+
+    @Override
+    public void shutdown() {
+        if (attackListener != null) {
+            protocolManager.removePacketListener(attackListener);
+            attackListener = null;
+        }
+    }
+
+    private static final class SkinLayerMetadata {
+        private final int index;
+        private final WrappedDataWatcher.Serializer serializer;
+
+        SkinLayerMetadata(int index, WrappedDataWatcher.Serializer serializer) {
+            this.index = index;
+            this.serializer = serializer;
+        }
+
+        public int index() {
+            return index;
+        }
+
+        public WrappedDataWatcher.Serializer serializer() {
+            return serializer;
+        }
+    }
+
+    private static final class ProfileData {
+        private final WrappedGameProfile profile;
+        private final boolean hasTexture;
+
+        ProfileData(WrappedGameProfile profile, boolean hasTexture) {
+            this.profile = profile;
+            this.hasTexture = hasTexture;
+        }
+
+        public WrappedGameProfile profile() {
+            return profile;
+        }
+
+        public boolean hasTexture() {
+            return hasTexture;
+        }
+    }
+}
